# v-portable-runtime

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  custom_models.mk  doxygen.cfg  meson.build
include/vpr/: abstract_factory.h  allocator.h  bloom_filter.h  compare.h  disposable.h  doubly_linked_list.h  dynamic_array.h  error_codes.h  function_decl.h  hash_func.h  hashmap.h  inline_support.h  linked_list.h  parameters.h  uuid.h  version.h
model/allocator/: fail_nullcheck.c  fail_nullrelease.c  fail_zeroallocate.c  fail_zeroreallocate.c  malloc_allocator_model.c
model/compare/: compare_bool.c  compare_char.c  compare_double.c  compare_float.c  compare_int.c  compare_int16.c  compare_int32.c  compare_int64.c  compare_int8.c  compare_long.c  compare_long_double.c  compare_long_long.c  compare_short.c  compare_uint16.c  compare_uint32.c  compare_uint64.c  compare_uint8.c  compare_unsigned_char.c  compare_unsigned_int.c  compare_unsigned_long.c  compare_unsigned_long_long.c  compare_unsigned_short.c  fail_compare_bool_badsize.c  fail_compare_bool_nullx.c  fail_compare_bool_nully.c  fail_compare_char_badsize.c  fail_compare_char_nullx.c  fail_compare_char_nully.c  fail_compare_double_badsize.c  fail_compare_double_nullx.c  fail_compare_double_nully.c  fail_compare_float_badsize.c  fail_compare_float_nullx.c  fail_compare_float_nully.c  fail_compare_int16_badsize.c  fail_compare_int16_nullx.c  fail_compare_int16_nully.c  fail_compare_int32_badsize.c  fail_compare_int32_nullx.c  fail_compare_int32_nully.c  (+48 more)
model/disposable/: disposable_model.c
model/dynamic_array/: custom_dynamic_array_append.c  custom_dynamic_array_grow.c  custom_dynamic_array_init.c  custom_dynamic_array_init_zeroinstances.c  custom_dynamic_array_linear_search.c  custom_fail_dynamic_array_append_noreserve.c  custom_fail_dynamic_array_append_nullarray.c  custom_fail_dynamic_array_append_nullelement.c  custom_fail_dynamic_array_grow_nullarray.c  custom_fail_dynamic_array_grow_shrink.c  custom_fail_dynamic_array_init_greaterinstances.c  custom_fail_dynamic_array_init_nonzeroinstance_nullcopy.c  custom_fail_dynamic_array_init_nullarray.c  custom_fail_dynamic_array_init_nulloptions.c  custom_fail_dynamic_array_init_zeroreserve.c  custom_fail_dynamic_array_linear_search_nullarray.c  custom_fail_dynamic_array_linear_search_nullelem.c  dynamic_array_options_init.c  dynamic_array_options_init_ex.c  fail_dynamic_array_options_init_ex_elementsize.c  fail_dynamic_array_options_init_ex_nullallocator.c  fail_dynamic_array_options_init_ex_nullcompare.c  fail_dynamic_array_options_init_ex_nullcopy.c  fail_dynamic_array_options_init_ex_nulldispose.c  fail_dynamic_array_options_init_ex_nulloptions.c  fail_dynamic_array_options_init_nullallocator.c  fail_dynamic_array_options_init_nulloptions.c  fail_dynamic_array_options_init_zeroelementsize.c
models/: abstract_factory.mk  abstract_factory_main.c  allocate.mk  allocate_main.c  allocate_shadow.mk  allocate_shadow_main.c  bloom_filter.mk  bloom_filter_main.c  bump_allocator.mk  bump_allocator_main.c  compare.mk  compare_main.c  disposable.mk  disposable_main.c  doubly_linked_list.mk  doubly_linked_list_main.c  hashmap.mk  hashmap_main.c  linked_list.mk  linked_list_main.c  malloc_allocate.mk  malloc_allocate_main.c  malloc_allocate_shadow.mk  malloc_allocate_shadow_main.c
scripts/: model-check.sh
src/: stub.c
src/abstract_factory/: abstract_factory.c
src/allocator/: allocate.c  allocate_shadow.c  allocator_control.c  allocator_control_shadow.c  bump_allocator_options_init.c  bump_allocator_options_init_shadow.c  concrete_inline_impls.c  malloc_allocator_options_dispose.c  malloc_allocator_options_dispose_shadow.c  malloc_allocator_options_init.c  malloc_allocator_options_init_shadow.c  reallocate.c  reallocate_shadow.c  release.c  release_shadow.c
src/bloom_filter/: bloom_filter_add_item.c  bloom_filter_calculate_error_rate.c  bloom_filter_calculate_num_hashes.c  bloom_filter_calculate_num_hashes_shadow.c  bloom_filter_calculate_size.c  bloom_filter_calculate_size_shadow.c  bloom_filter_contains_item.c  bloom_filter_hash.c  bloom_filter_init.c  bloom_filter_options_init.c  bloom_filter_options_init_ex.c  concrete_inline_impls.c
src/compare/: compare_bool.c  compare_char.c  compare_double.c  compare_float.c  compare_int.c  compare_int16.c  compare_int32.c  compare_int64.c  compare_int8.c  compare_long.c  compare_long_double.c  compare_long_long.c  compare_short.c  compare_uint16.c  compare_uint32.c  compare_uint64.c  compare_uint8.c  compare_unsigned_char.c  compare_unsigned_int.c  compare_unsigned_long.c  compare_unsigned_long_long.c  compare_unsigned_short.c
src/disposable/: dispose.c  dispose_init.c  dispose_shadow.c
src/doubly_linked_list/: concrete_inline_impls.c  doubly_linked_list_init.c  doubly_linked_list_init_shadow.c  doubly_linked_list_insert_after.c  doubly_linked_list_insert_before.c  doubly_linked_list_insert_beginning.c  doubly_linked_list_insert_beginning_shadow.c  doubly_linked_list_insert_end.c  doubly_linked_list_options_init.c  doubly_linked_list_options_init_ex.c  doubly_linked_list_options_init_shadow.c  doubly_linked_list_remove.c  doubly_linked_list_remove_shadow.c
src/dynamic_array/: concrete_inline_impls.c  dynamic_array_append.c  dynamic_array_binary_search.c  dynamic_array_grow.c  dynamic_array_init.c  dynamic_array_linear_search.c  dynamic_array_options_init.c  dynamic_array_options_init_ex.c  dynamic_array_sort.c
src/hash_func/: hash_func.c
src/hashmap/: concrete_inline_impls.c  hashmap_get.c  hashmap_get64.c  hashmap_get_var_key.c  hashmap_init.c  hashmap_options_init.c  hashmap_options_init_ex.c  hashmap_put.c  hashmap_put64.c  hashmap_put_var_key.c
src/linked_list/: concrete_inline_impls.c  linked_list_init.c  linked_list_insert_after.c  linked_list_insert_before.c  linked_list_insert_beginning.c  linked_list_insert_end.c  linked_list_options_init.c  linked_list_options_init_ex.c  linked_list_remove.c
src/uuid/: vpr_uuid_from_string.c  (+1 more)
subprojects/: gtest.wrap  minunit.wrap  vcmodel.wrap
test/: testmain.cpp
(+64 files in other folders)
