cmake_minimum_required(VERSION 3.9)
project(vpr)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra")
# SHHH Cmake.
set(CMAKE_SKIP_PREPROCESSED_SOURCE_RULES TRUE)
set(CMAKE_SKIP_ASSEMBLY_SOURCE_RULES TRUE)
include_directories(include
        $ENV{VCMODEL_DIR}/include)
add_library(vpr
        include/vpr/allocator/malloc_allocator.h
        include/vpr/abstract_factory.h
        include/vpr/allocator.h
        include/vpr/compare.h
        include/vpr/disposable.h
        include/vpr/dynamic_array.h
        include/vpr/parameters.h
        src/abstract_factory/abstract_factory.c
        src/allocator/allocate.c
        src/allocator/malloc_allocator_options_dispose.c
        src/allocator/malloc_allocator_options_init.c
        src/allocator/reallocate.c
        src/allocator/release.c
        src/compare/compare_bool.c
        src/compare/compare_char.c
        src/compare/compare_double.c
        src/compare/compare_float.c
        src/compare/compare_int.c
        src/compare/compare_int16.c
        src/compare/compare_int32.c
        src/compare/compare_int64.c
        src/compare/compare_int8.c
        src/compare/compare_long.c
        src/compare/compare_long_double.c
        src/compare/compare_long_long.c
        src/compare/compare_short.c
        src/compare/compare_uint16.c
        src/compare/compare_uint32.c
        src/compare/compare_uint64.c
        src/compare/compare_uint8.c
        src/compare/compare_unsigned_char.c
        src/compare/compare_unsigned_int.c
        src/compare/compare_unsigned_long.c
        src/compare/compare_unsigned_long_long.c
        src/compare/compare_unsigned_short.c
        src/disposable/dispose.c
        src/dynamic_array/dynamic_array_append.c
        src/dynamic_array/dynamic_array_grow.c
        src/dynamic_array/dynamic_array_init.c
        src/dynamic_array/dynamic_array_linear_search.c
        src/dynamic_array/dynamic_array_options_init.c
        src/dynamic_array/dynamic_array_options_init_ex.c
        src/dynamic_array/dynamic_array_sort.c)
add_executable(vpr_test
        test/allocator/mock_allocator.cpp
        test/allocator/mock_allocator.h
        test/allocator/test_allocate.cpp
        test/allocator/test_malloc_allocator_options_init.cpp
        test/allocator/test_reallocate.cpp
        test/allocator/test_release.cpp
        test/compare/test_compare_bool.cpp
        test/compare/test_compare_char.cpp
        test/compare/test_compare_double.cpp
        test/compare/test_compare_float.cpp
        test/compare/test_compare_int.cpp
        test/compare/test_compare_int16.cpp
        test/compare/test_compare_int32.cpp
        test/compare/test_compare_int64.cpp
        test/compare/test_compare_int8.cpp
        test/compare/test_compare_long.cpp
        test/compare/test_compare_long_double.cpp
        test/compare/test_compare_long_long.cpp
        test/compare/test_compare_short.cpp
        test/compare/test_compare_uint16.cpp
        test/compare/test_compare_uint32.cpp
        test/compare/test_compare_uint64.cpp
        test/compare/test_compare_uint8.cpp
        test/compare/test_compare_unsigned_char.cpp
        test/compare/test_compare_unsigned_int.cpp
        test/compare/test_compare_unsigned_long.cpp
        test/compare/test_compare_unsigned_long_long.cpp
        test/compare/test_compare_unsigned_short.cpp
        test/dynamic_array/test_dynamic_array_append.cpp
        test/dynamic_array/test_dynamic_array_grow.cpp
        test/dynamic_array/test_dynamic_array_init.cpp
        test/dynamic_array/test_dynamic_array_linear_search.cpp
        test/dynamic_array/test_dynamic_array_sort.cpp
        test/testmain.cpp)
target_link_libraries(vpr_test vpr gtest)
